clicking on any one of the elements that isnt remove will now take you to another page, this can later be change to the single task view. needs to be fixed: the link element doesnt take the space of the entire table data and the spacing is for some reason weird before being highlighted over

--- a/src/pages/TasksAll.css
+++ b/src/pages/TasksAll.css
@@ -16,7 +16,7 @@ table{
     border-collapse: collapse;
 }
 
-td,th{
+th{
     padding-left: 15px;
     padding-right: 15px;
 
@@ -60,4 +60,10 @@ caption{
 .remove-col{
     background-color: #ffffff;
     border-left: 80px solid transparent;
+}
+
+.table-data-link{
+    color:black;
+
+    width: 100%;
 }
